--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "themeisee/mssql-time-converter",
-  "description": "Converts float type time from MSSQL to PHP DateTime",
-  "version": "0.0.1",
+  "description": "Converts float type to DateTime",
+  "version": "1.0.0",
   "license": "MIT",
   "authors": [
     {
