--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "themeisee/mssql-time-converter",
   "description": "Converts float type to DateTime",
   "type": "library",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "authors": [
     {
@@ -14,6 +14,8 @@
     "php": "^7.0"
   },
   "autoload": {
-    "classmap": ["MSSQLTimeConverter"]
+    "psr-0": {
+      "MSSQLTimeConverter" : "src/"
+    }
   }
 }
